[workspace]
# See: https://github.com/rust-lang/rust/issues/90148#issuecomment-949194352
resolver = "2"
members = [
    "nexus-webapi",
    "nexus-common",
    "nexus-watcher",
    "nexusd",
    "examples",
]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = "4.5.53"
deadpool-redis = "0.22"
neo4rs = "0.8.0"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
# pubky = "0.5.4"
pubky = { git = "https://github.com/pubky/pubky-core.git", package = "pubky", rev = "4fc2294bfe40e4696cc27bbdf3838917cb8d11c6" }
pubky-app-specs = { version = "0.4.0", features = ["openapi"] }
# pubky-testnet = "0.5.4"
pubky-testnet = { git = "https://github.com/pubky/pubky-core.git", package = "pubky-testnet", rev = "4fc2294bfe40e4696cc27bbdf3838917cb8d11c6" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tempfile = { version = "3.23" }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-shared-rt = "0.1"
tracing = "0.1.44"
