[workspace]
# See: https://github.com/rust-lang/rust/issues/90148#issuecomment-949194352
resolver = "2"
members = [
    "nexus-webapi",
    "nexus-common",
    "nexus-watcher",
    "nexusd",
    "examples",
]

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = "4.6.0"
deadpool-redis = "0.23"
neo4rs = "0.8.0"
redis = "1.0.4"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
pubky = "0.7.0"
pubky-app-specs = { git = "https://github.com/pubky/pubky-app-specs.git", rev = "bf78fe845ef55e96984a3bea954b69053fa7e8af", features = ["openapi"] }
pubky-testnet = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.25"
thiserror = "2.0.17"
tokio = { version = "1.50.0", features = ["full"] }
tokio-shared-rt = "0.1"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-test = "0.2"
futures = "0.3"
