[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

[dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
nexus-api = { version = "0.1.0", path = "../nexus-api" }
nexus-common = { version = "0.1.0", path = "../nexus-common" }
nexus-watcher = { version = "0.1.0", path = "../nexus-watcher" }
pubky = "0.4.1"
pubky-app-specs = { version = "0.3.2"}
pubky-testnet = "0.1.1"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
httpc-test = "0.1.10"

# WiP
[[bench]]
name = "user"
path="user.rs"
harness = false

[[bench]]
name = "tag"
path="tag.rs"
harness = false

[[bench]]
name = "post"
path="post.rs"
harness = false

[[bench]]
name = "reindex"
path="reindex.rs"
harness = false

[[bench]]
name = "follows"
path="follows.rs"
harness = false

[[bench]]
name = "streams"
path="streams.rs"
harness = false

[[bench]]
name = "search"
path="search.rs"
harness = false

[[bench]]
name = "watcher"
path="watcher.rs"
harness = false