[package]
name = "nexus-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api_example"
path = "./api/main.rs"

[[bin]]
name = "watcher_example"
path = "./watcher/main.rs"

[dependencies]
tokio = { workspace = true }
nexus-common = { path = "../nexus-common" }
nexus-webapi = { path = "../nexus-webapi" }
nexus-watcher = { path = "../nexus-watcher" }
pubky-app-specs = { workspace = true }
clap = { workspace = true }
