[package]
name = "nexus-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api_example"
path = "./api/main.rs"

[[bin]]
name = "watcher_example"
path = "./watcher/main.rs"

# Query performance audit dumper (see docker/bench-graph/).
[[bin]]
name = "graph-audit"
path = "./graph_audit/main.rs"

[dependencies]
tokio = { workspace = true }
nexus-common = { path = "../nexus-common" }
nexus-webapi = { path = "../nexus-webapi" }
nexus-watcher = { path = "../nexus-watcher" }
clap = { workspace = true }
