[package]
name = "nexus-api"
version = "0.4.0"
edition = "2021"
description = "Nexus API exposes a social-media-like API capable of powerful Web-of-Trust inference"
homepage = "https://github.com/pubky/pubky-nexus"
repository = "https://github.com/pubky/pubky-nexus"
license = "MIT"
build = "build.rs"

[dependencies]
async-trait = "0.1.85"
axum = "0.8.1"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
clap = { version = "4.5.32", features = ["derive"] }
const_format = "0.2.34"
neo4rs = "0.8.0"
once_cell = "1.20.2"
opentelemetry = { version = "0.28" }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
pubky = "0.4.1"
pubky-app-specs = { version = "0.3.3", features = ["openapi"] }
nexus-common = { version = "0.4.0", path = "../nexus-common" }
redis = { version = "0.29.0", features = ["tokio-comp", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
tracing = "0.1"
utoipa = "5.3.1"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }

[dev-dependencies]
anyhow = "1.0.95"
criterion = { version = "0.5.1", features = ["async_tokio"] }
httpc-test = "0.1.10"
tokio-shared-rt = "0.1"
url = "2.5.4"
reqwest = "0.12.12"


[[bench]]
name = "user"
harness = false

[[bench]]
name = "tag"
harness = false

[[bench]]
name = "post"
harness = false

[[bench]]
name = "reindex"
harness = false

[[bench]]
name = "follows"
harness = false

[[bench]]
name = "streams"
harness = false

[[bench]]
name = "search"
harness = false
