[package]
name = "nexus-common"
version = "0.4.0"
edition = "2021"
description = "Nexus common utils"
homepage = "https://github.com/pubky/pubky-nexus"
repository = "https://github.com/pubky/pubky-nexus"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
neo4rs = { workspace = true }
once_cell = "1.21.3"
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = "0.29.1"
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true }
pubky = "0.4.3-rc.0"
pubky-app-specs = { workspace = true }
redis = { version = "0.30.0", features = ["tokio-comp", "json"] }
deadpool-redis = "0.20.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "0.8.20"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = "5.3.1"
