[package]
name = "nexus-common"
version = "0.4.1"
edition = "2021"
description = "Nexus common utils"
homepage = "https://github.com/pubky/pubky-nexus"
repository = "https://github.com/pubky/pubky-nexus"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
dirs = "6.0.0"
chrono = { workspace = true }
neo4rs = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true }
pubky = { workspace = true }
pubky-app-specs = { workspace = true }
redis = { version = "0.32", features = ["tokio-comp", "json"] }
deadpool-redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "1.0.1"
tracing = { workspace = true }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = "5.4.0"

[dev-dependencies]
tempfile = { workspace = true }
tokio-shared-rt = { workspace = true }
