[package]
name = "nexus-stats"
version = "0.1.0"
edition = "2021"
description = "A simple service that periodically collects Neo4j metrics and writes them to a CSV file for observability."
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
csv = "1.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
nexus-common = { version = "0.4.0", path = "../nexus-common" }
neo4rs = "0.8.0"
clap = { version = "4.5.32", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
