[package]
name = "nexus-watcher"
version = "0.4.1"
edition = "2021"
description = "Nexus Watcher constructs a social graph out of all of the events on pubky-core homeservers"
homepage = "https://github.com/pubky/pubky-nexus"
repository = "https://github.com/pubky/pubky-nexus"
license = "MIT"

[features]
# Exposes in-crate test doubles (e.g. `MockPkdnsResolver`) to the integration
# test target, which can't see `#[cfg(test)]` items across the crate boundary.
# Enable with `--features test-utils` when running `nexus-watcher` tests.
test-utils = []

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
nexus-common = { path = "../nexus-common" }
opentelemetry = { workspace = true }
pubky = { workspace = true }
pubky-app-specs = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
base32 = "0.5"
pubky-testnet = { workspace = true }
rand = "0.10.1"
tokio-shared-rt = { workspace = true }
