[package]
name = "nexus-watcher"
version = "0.4.1"
edition = "2021"
description = "Nexus Watcher constructs a social graph out of all of the events on pubky-core homeservers"
homepage = "https://github.com/pubky/pubky-nexus"
repository = "https://github.com/pubky/pubky-nexus"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
bytes = "1"
chrono = { workspace = true }
futures = { workspace = true }
opentelemetry = { workspace = true }
pubky = { workspace = true }
pubky-app-specs = { workspace = true }
nexus-common = { version = "0.4.1", path = "../nexus-common" }
reqwest = { version = "0.13", default-features = false, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
base32 = "0.5"
http = "1"
pubky-testnet = { workspace = true }
rand = "0.10.1"
tempfile = { workspace = true }
tokio-shared-rt = { workspace = true }
