[package]
name = "nexus-webapi"
version = "0.4.1"
edition = "2021"
description = "Nexus API exposes a social-media-like API capable of powerful Web-of-Trust inference"
homepage = "https://github.com/pubky/pubky-nexus"
repository = "https://github.com/pubky/pubky-nexus"
license = "MIT"
build = "build.rs"

[dependencies]
async-trait = { workspace = true }
axum = "0.8.4"
axum-server = "0.7.2"
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
const_format = "0.2.34"
neo4rs = { workspace = true }
once_cell = "1.21.3"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
pubky-app-specs = { workspace = true }
nexus-common = { version = "0.4.1", path = "../nexus-common" }
deadpool-redis = "0.21.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.6", features = [
    "fs",
    "cors",
    "compression-full",
] }
tracing = { workspace = true }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
anyhow = "1.0.98"
criterion = { version = "0.6.0", features = ["async_tokio"] }
httpc-test = "0.1.10"
tokio-shared-rt = "0.1"
url = "2.5.4"

[[bench]]
name = "bootstrap"
harness = false

[[bench]]
name = "user"
harness = false

[[bench]]
name = "tag"
harness = false

[[bench]]
name = "post"
harness = false

[[bench]]
name = "reindex"
harness = false

[[bench]]
name = "follows"
harness = false

[[bench]]
name = "streams"
harness = false

[[bench]]
name = "search"
harness = false
