[package]
name = "nexus-webapi"
version = "0.4.1"
edition = "2021"
description = "Nexus API exposes a social-media-like API capable of powerful Web-of-Trust inference"
homepage = "https://github.com/pubky/pubky-nexus"
repository = "https://github.com/pubky/pubky-nexus"
license = "MIT"
build = "build.rs"

[dependencies]
axum = "0.8.6"
axum-server = { version = "0.7.2", features = ["tls-rustls-no-provider"] }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
const_format = "0.2.35"
futures-util = "0.3.31"
neo4rs = { workspace = true }
once_cell = "1.21.3"
opentelemetry = { workspace = true }
pubky-app-specs = { workspace = true }
nexus-common = { version = "0.4.1", path = "../nexus-common" }
deadpool-redis = { workspace = true }
pkarr = { version = "3.10.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.6", features = [
    "fs",
    "cors",
    "compression-full",
] }
tracing = { workspace = true }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { version = "0.7.0", features = ["async_tokio"] }
httpc-test = "0.1.10"
pubky-testnet = { workspace = true }
tempfile = { workspace = true }
tokio-shared-rt = { workspace = true }
url = "2.5.4"

[[bench]]
name = "bootstrap"
harness = false

[[bench]]
name = "user"
harness = false

[[bench]]
name = "tag"
harness = false

[[bench]]
name = "post"
harness = false

[[bench]]
name = "reindex"
harness = false

[[bench]]
name = "follows"
harness = false

[[bench]]
name = "streams"
harness = false

[[bench]]
name = "search"
harness = false
