[package]
name = "nexusd"
version = "0.4.0"
edition = "2021"
description = "Nexus daemon"
homepage = "https://github.com/pubky/pubky-nexus"
repository = "https://github.com/pubky/pubky-nexus"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5.37", features = ["derive"] }
neo4rs = { workspace = true }
nexus-api = { version = "0.4.0", path = "../nexus-api" }
nexus-common = { version = "0.4.0", path = "../nexus-common" }
nexus-watcher = { version = "0.4.0", path = "../nexus-watcher" }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-shared-rt = "0.1"
