[package]
name = "nexusd"
version = "0.4.1"
edition = "2021"
description = "Nexus daemon"
homepage = "https://github.com/pubky/pubky-nexus"
repository = "https://github.com/pubky/pubky-nexus"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
nexus-webapi = { version = "0.4.1", path = "../nexus-webapi" }
nexus-common = { version = "0.4.1", path = "../nexus-common" }
redis = { workspace = true, features = ["tokio-comp"] }
nexus-watcher = { version = "0.4.1", path = "../nexus-watcher" }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-shared-rt = { workspace = true }
