[package]
name = "pk-social-service"
version = "0.1.0"
edition = "2021"
description = "Server that exposes a social-media-like view out of pubky events for pubky-app clients"
homepage = "https://github.com/pubky"
repository = "https://github.com/pubky/pubky-app-backend"
license = "MIT"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
tower-http = { version = "0.5.2", features = ["fs"] }
dotenv = "0.15"

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.9"
